[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/RetryButton.png" type="Texture" id=1]
[ext_resource path="res://assets/GameOver.png" type="Texture" id=2]
[ext_resource path="res://assets/RetryButtonPressed.png" type="Texture" id=3]
[ext_resource path="res://assets/QuitButtonPressed.png" type="Texture" id=4]
[ext_resource path="res://assets/Button-click-sound.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/QuitButton.png" type="Texture" id=6]
[ext_resource path="res://scenes/PlayButton.gd" type="Script" id=7]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
margin_left = 334.0
margin_top = 80.0
margin_right = 941.0
margin_bottom = 857.0
rect_scale = Vector2( 0.6, 0.6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TextureRect/VBoxContainer"]
margin_right = 646.0
margin_bottom = 200.0
texture = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="TextureRect/VBoxContainer"]
margin_top = 204.0
margin_right = 646.0
margin_bottom = 624.0

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/VBoxContainer/CenterContainer"]
margin_left = 66.0
margin_right = 580.0
margin_bottom = 420.0

[node name="RetryButton" type="TextureButton" parent="TextureRect/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 514.0
margin_bottom = 208.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
script = ExtResource( 7 )

[node name="QuitButton" type="TextureButton" parent="TextureRect/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 212.0
margin_right = 514.0
margin_bottom = 420.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="pressed" from="TextureRect/VBoxContainer/CenterContainer/VBoxContainer/RetryButton" to="TextureRect/VBoxContainer/CenterContainer/VBoxContainer/RetryButton" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/CenterContainer/VBoxContainer/QuitButton" to="TextureRect/VBoxContainer/CenterContainer/VBoxContainer/RetryButton" method="_on_QuitButton_pressed"]
